@@ -32,3 +32,4 @@ bluedress.shp
 death_scythe.shp
 firewand.shp
 knife.shp
+starburst.shp
